# RubikN

./: CMakeLists.txt  RubikN.kdev4  main.cpp
.kdev4/: RubikN.kdev4
3Dview/: CMakeLists.txt
3Dview/include/: rubik3d.h
3Dview/source/: rubik3d.cpp
CLi/: CMakeLists.txt
CLi/include/: color_nix.h  color_win.h  def_colors.h  text_output.h
CLi/source/: text_output.cpp
core/: CMakeLists.txt
core/include/: axis.h  base.h  bit64set.h  permutation3.h  spin.h  spin_lookup.h
core/source/: axis.cpp  permutation3.cpp  spin.cpp
cube_operations/include/: .cayley_graph.h.kate-swp  cube_rotations.h  group.h
cube_parts/: cframework.h  clayers.h  coords.h  cposition.h  cposition_lookup.h  crotation_lookup.h  layer.h  layers.h  slice.h
cube_rotations/: crotation_lookup.h  crotation_objects.h
rotations/: CMakeLists.txt
rotations/include/: axis.h  cube_rotations.h  slice.h  spin.h  spin_lookup.h
rubik/: rsubspace.h
simplex/: CMakeLists.txt
simplex/include/: axis.h  spin_lookup.h  turn.h
simplex/source/: axis.cpp  spin.cpp  turn.cpp
